Fix hidden menu title on smaller screens (https://github.com/woocommerce/woocommerce-admin/pull/6562)
* Fix hidden menu title on smaller screens

* Add changelog entry and testing instructions

--- a/plugins/woocommerce-admin/client/navigation/style.scss
+++ b/plugins/woocommerce-admin/client/navigation/style.scss
@@ -17,6 +17,10 @@
 	.components-navigation {
 		box-sizing: border-box;
 	}
+
+	.components-navigation__menu-title {
+		overflow: visible;
+	}
 }
 
 .woocommerce-navigation__wrapper {
